# tinychaos

./: .gitignore  BOM.md  README.md
.github/workflows/: firmware-esp32s3-release.yml
analysis/: Directory.Build.props  README.md  TinyChaos.sln
analysis/macos/: Info.plist  package-mac.sh
bot/: .env.example  .gitignore  README.md  com.tinychaos.bot.plist  requirements.txt  send_to_group.py  tinychaos.code-workspace  tinychaos_bot.py
bot/tests/: conftest.py  test_apply.py  test_callbacks.py  test_db.py  test_firmware.py  test_gating.py  test_hal.py  test_menus.py  test_pending.py  test_send.py  test_text.py
docs/: ENTROPY_CAPTURE_PIPELINE.md  FIRMWARE_INTEGRATION.md  adc-protection.md  analysis-app.md  architecture.md  filtering-and-power.md  firmware-notes.md  hardware-design.md
firmware/: Makefile  NUCLEO_SETUP.md  README.md
firmware-esp32s3/: .gitignore  README.md  platformio.ini
firmware-esp32s3/src/: OtaUi.cpp  OtaUi.h  OtaUpdater.cpp  OtaUpdater.h  main.cpp  wifi_config.h.template
firmware-esp32s3/tools/: inject_build_tag.py
firmware/nucleo-h753zi/: .gitignore  CMakeLists.txt  STM32H753XX_FLASH.ld  flash.ps1  flash.sh  tinychaos.ioc
hardware/: element14-bom.csv
samples/: README.md  floating_50hz-samples.csv
tools/: README.md  extract_samples.py  pyproject.toml
tools/src/tinychaos/: __init__.py  analysis.py  cli.py  exporters.py  framer.py  io_serial.py  plotting.py  protocol.py  stats.py
tools/tests/: conftest.py  test_analysis.py  test_cli_smoke.py  test_crc16.py  test_framer.py  test_plotting_missing.py  test_protocol.py  test_stats.py
(+76 files in other folders)
