[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinychaos-tools"
version = "0.1.0"
description = "Host tools for the tinychaos zener-noise entropy capture pipeline"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "pyserial>=3.5",
    "numpy>=1.24",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "hypothesis>=6",
]

[project.scripts]
entropy-reader = "tinychaos.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.coverage.run]
source = ["src/tinychaos"]
